Fix checkbox label overlapping

--- a/src/utils/custom-checkbox.scss
+++ b/src/utils/custom-checkbox.scss
@@ -1,12 +1,12 @@
 .sjs-cb-wrapper {
   display: inline-block;
   margin-right: 1em;
-  line-height: 2em;
+  min-height: 2em;
 }
 
 .sjs-cb-container {
   position: relative;
-  height: 1em;
+  min-height: 1em;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
